Update README.m to add setup